c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/double_declarator.c
int main(void) {
    // array size must be an integer
    int x[2.0];
}